--- a/src/main/resources/templates/department/list.html
+++ b/src/main/resources/templates/department/list.html
@@ -72,7 +72,7 @@
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.11.5/i18n/vi.json'
                 },
-                "order": [[ 0, "asc" ]],
+                order: [[0, 'asc']],
                 "pageLength": 10
             });
         });
