--- a/src/main/resources/templates/staff/import-histories.html
+++ b/src/main/resources/templates/staff/import-histories.html
@@ -73,7 +73,7 @@
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.11.5/i18n/vi.json'
                 },
-                "order": [[ 5, "desc" ]],
+                order: [[5, 'desc']],
                 "pageLength": 10
             });
         });
